# Battery_Aging_Manager

./: .gitignore  CMakeLists.txt  README.md  UI_Styling.cpp  UI_Styling.h  battery_aging.cpp  battery_aging.h  battery_aging.ui  main.cpp
